--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GalleryViewer"
         tools:targetApi="31"
+        android:name=".App"
        >
         <activity
             android:name=".ui.MainActivity"
